Agregada la traduccion de la pestaña Sobre nosotros

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
         </div>
         <address class="info">
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="mailto:jim@example.com">jim@example.com</a><br />
+                href="mailto:Info@geonicsa.com">Info@geonicsa.com</a><br />
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                 href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
-                target="_blank">+505 8527-49058</a>
+                target="_blank">+505 5810-3203</a>
         </address>
 
 
