--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -91,7 +91,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md descripcion-servicio">
-                    <p class="lh-base" data-section="nosotros" data-value="info-1"> <strong>GEONICSA</strong>, una firma consultora con más de dos décadas de experiencia, se
+                    <p class="lh-base" data-section="nosotros" data-value="info-1"> <strong>GEONICSA</strong>, una firma
+                        consultora con más de dos décadas de experiencia, se
                         estableció con el compromiso de realizar nuestro trabajo con los estándares de calidad y
                         excelencia que nos han definido desde nuestra fundación hasta la actualidad.
                         <br><br>
@@ -110,39 +111,40 @@
 
 
                 <div class="col-md justify-content-center">
-                    <img src="./img/banner_inicio.jpg" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
+                    <img src="./img/banner_inicio.jpg" style="margin-top: 3vh !important;" class="img-fluid mx-auto d-block" alt="..." loading="lazy">
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md descripcion-servicio">
-                    <h3>Nuestro fundador: <strong>Msc. Ing. Oscar Osvaldo Jirón Boza</strong> </h3>
-                    <p class="lh-base">En 1972 inició sus estudios de Ingeniería Civil en la UNAN Managua, su primer
-                        trabajo
-                        fue en el MOP
-                        (Ministerio de Obras Públicas) a partir de enero de 1978, en 1979 laboró durante 9 años en el
-                        MICONS
-                        (Ministerio de la Construcción) hasta finales de 1988 cuando sale a estudiar la Maestría de
-                        Mecánica
-                        de Suelos en la UNAM, México. Al retornar a Nicaragua a inicios de 1991 hasta 1993 laboró en
-                        CEICOSA
-                        y luego en LLANSA. Ese mismo año es llamado a laborar en LAMSA para ocupar el cargo de jefe del
-                        departamento de Laboratorio y Perforación durante 8 años. En 2001 paso a laborar en MECO-SANTA
-                        FE
-                        como jefe de Control de Calidad de proyectos por año y medio.
-                    </p>
-                    <p class="lh-base">
+                    <h3 data-section="nosotros" data-value="nombre-fundador">Nuestro fundador: Msc. Ing. Oscar Osvaldo Jirón Boza </h3>
+                    <p class="lh-base" data-section="nosotros" data-value="info-fundador">
+                        En 1972 inició sus estudios de
+                        ingeniería civil en la UNAN Managua, su primer trabajo fue en el MOP (Ministerio de Obras
+                        Públicas) a partir de enero de 1978. En 1979 laboró durante 9 años en el MICONS (Ministerio de
+                        la construcción) hasta finales de 1988, cuando viaja a México a estudiar una maestría de
+                        mecánica de suelos en la UNAM. A su retorno a Nicaragua a inicios de 1991 hasta 1993 laboró en
+                        CEICOSA y luego en LLANSA. Ese mismo año es llamado a laborar en LAMSA para ocupar el cargo de
+                        jefe del departamento de laboratorio y perforación durante 8 años. En 2001 pasó a laborar en
+                        MECO - SANTA FE como jefe de control de calidad de proyectos por año y medio.
+                        <br><br>
                         En el año 2003, el Ingeniero Oscar Osvaldo Jirón Boza, viendo la necesidad que tenía Nicaragua
-                        en el
-                        campo de la ingeniería, de desarrollar técnicamente y cuantitativamente la rama de estudios
-                        geotécnicos y de materiales de construcción, fundó la empresa GEONIC que es una empresa que
-                        ofrece
-                        de manera general servicios de geotecnia y control de calidad de materiales.
+                        en el campo de la ingeniería, de desarrollar técnicamente y cuantitativamente la rama de
+                        estudios geotécnicos y de materiales de construcción, fundó la empresa GEONIC que ofrece de
+                        manera general servicios de geotecnia y control de calidad de suelos y concreto.
+
+                        <br><br>
+                        Geotecnia de Nicaragua, (GEONIC) en estos veinte 20 años de existencia ha venido desarrollando
+                        estudios para ingeniería vertical (cimientos de edificios, diseño de mejoramiento de suelos de
+                        fundación, diseños de hormigón hidráulico, entre otros), para ingeniería horizontal (diseño
+                        vial, diseño de estructuras de pavimento, concreto hidráulico, concreto asfáltico, adoquines,
+                        geotextil), y estudios de fuentes de materiales y control de calidad de suelos y concreto.
+
+
                     </p>
                 </div>
 
 
-                
             </div>
             <hr>
             <div class="row">
@@ -150,76 +152,73 @@
                     <img src="./img/sobre-nosotros3.jpg" class="imagen-servicio justify-content-center" alt="">
                 </div>
                 <div class="col-md descripcion-servicio">
-                    <p> <strong>GEONICSA</strong> mantiene relaciones directas con privados, instituciones del estado, e intercambios de
-                        servicios
-                        con Firmas Consultoras y Constructoras nacionales e internacionales, mencionando algunas de
-                        ellas y
-                        trabajos realizados, a continuación:
+                    <p data-section="nosotros" data-value="resumen-proyectos"> <strong>GEONIC</strong>  mantiene relaciones directas con entes privados, instituciones del estado, e intercambios de servicios con firmas consultoras y constructoras nacionales e internacionales, mencionando algunas de ellas y trabajos realizados, a continuación:
                     </p>
                     <div class="d-flex" style="height: fit-content;">
                         <div class="vr"></div>
                         <div>
                             <ul>
-                                <li>
+                                <li data-section="nosotros" data-value="roughton">
                                     <b>ROUGHTON</b>: Estudios geotécnicos de Carreteras y Puentes en Costa Rica,
                                     incluyendo
                                     la instalación de un
                                     Laboratorio de Suelos. Carretera Malpaisillo-Villa 15 de Julio.
                                 </li>
-                                <li>
-                                    <b>EDICO</b>: Estudio geotécnico de la Carretera Río Blanco-Mulukuku (tramo puente
-                                    Mulukuku, 4 km).
+                                <li data-section="nosotros" data-value="edico">
+                                    <b>EDICO</b>:  Estudio geotécnico de la carretera tramo Río Blanco – Mulukuku.
+                                </li>
+                                <li data-section="nosotros" data-value="tec">
+                                    <b>TEC</b>: Estudio geotécnico de carretera y puentes del tramo Pantasma - Wiwilí. Estudio geotécnico de la carretera de circunvalación de Masaya.
+
+                                </li>
+                                <li data-section="nosotros" data-value="eaai">
+                                    <b>EAAI</b>: Estudio de suelos para la ampliación en 800 metros de pista del aeropuerto Augusto Cesar Sandino en Managua
+                                </li>
+                                <li >
+                                    <b>INABENSA:</b>
+                                    <ul >
+                                        <li data-section="nosotros" data-value="inabensa-1">Estudio de cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas al Guasaule.</li>
+                                        <li data-section="nosotros" data-value="inabensa-2">En Guatemala, estudio de cimentación del tramo Chiquimula, Zacapa y Santa Rosa, incluyendo la instalación de un laboratorio de Suelos.</li>
+                                    </ul>
+                                </li>
+                                <li data-section="nosotros" data-value="cemex">
+                                    <b>CEMEX</b>: Estudio geotécnico de la fábrica de clinker para cemento ubicado en la refinería, Managua.
+
+                                </li>
+                                <li data-section="nosotros" data-value="alma">
+                                    <b>ALMA</b>: Estudio geotécnico y pavimento en numerosas calles y cauces de Managua.
+                                </li>
+                                <li data-section="nosotros" data-value="icc">
+                                    <b>ICC</b>: Estudio Geotécnico presa Hidropantasma. Estudio Geotécnico Presa Tumarín.
+                                </li>
+                                <li data-section="nosotros" data-value="alba">
+                                    <b>ALBA</b>: Estudio geotécnico de generación de energía eólica planta La Fe, Rivas (22 torres). Estudio geotécnico proyecto planta Los Brasiles.
                                 </li>
                                 <li>
-                                    <b>TEC</b>: Estudio geotécnico de Carretera y Puentes Pantasma-Wiwilí.
-                                    Circunvalación de
-                                    Masaya.
+                                    <b>CONINCASA</b>: 
+                                    <ul> 
+                                        <li data-section="nosotros" data-value="conincasa-1">Estudio geotécnico ampliación del Puerto de Corinto.</li>
+                                        <li data-section="nosotros" data-value="conincasa-2"> Estudio de suelos y pavimento de caminos a las presas Carlos Fonseca y presa Larreynaga.</li>
+                                        <li data-section="nosotros" data-value="conincasa-3">Estudio geotécnico de la pista del aeropuerto de Corn Island y pista aeropuerto de Bluefields, pista aeropuerto Los Brasiles, pista aeropuerto Punta Huete.</li>
+                                        <li data-section="nosotros" data-value="conincasa-4">Estudio Geotécnico y Pavimento de calles de rodajes y estacionamientos en el aeropuerto Augusto Cesar Sandino en Managua.</li>
+                                    </ul>
                                 </li>
                                 <li>
-                                    <b>EAAI</b>: Estudio de Suelos para la Ampliación en 800 m de Pista Aeropuerto A. C.
-                                    S.
-                                    Managua (2006).
+                                    <b>MECO</b>: 
+                                    <ul>
+                                        <li data-section="nosotros" data-value="meco-1">Estudio geotécnico puente el Bopal sobre el río grande de Matagalpa.</li>
+                                        <li data-section="nosotros" data-value="meco-2">Estudio geotécnico puente paso a desnivel La Robelo. </li>
+                                        <li data-section="nosotros" data-value="meco-3">Estudio geotécnico ampliación del cauce oriental en Managua.</li>
+                                    </ul>
                                 </li>
-                                <li>
-                                    <b>INABENSA</b>: Cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas
-                                    al
-                                    Guasaule. En Guatemala, tramo Chiquimula, Zacapa y Sta. Rosa, incluyendo la
-                                    instalación
-                                    de un Laboratorio de Suelos.
-                                </li>
-                                <li>
-                                    <b>CEMEX</b>: Fábrica de Clinker para cemento en Cuesta la Refinería, Managua.
-                                </li>
-                                <li>
-                                    <b>ALMA</b>: Estudio Geotécnico y Pavimento en numerosas Calles y Cauces de Managua.
-                                </li>
-                                <li>
-                                    <b>ICC</b>: Estudio Geotécnico Presa Hidropantasma. Presa Tumarín (250 Megas).
-                                </li>
-                                <li>
-                                    <b>ALBA</b>: Estudio Geotécnico de Generación Eólica La Fe, Rivas (22 torres).
-                                    Proyecto
-                                    Planta Los Brasiles (140 MW), entre otros.
-                                </li>
-                                <li>
-                                    <b>CONINCASA</b>: Ampliación Puerto Corinto. Suelos y Pavimento de Caminos a Presas
-                                    PCF
-                                    y Larreynaga. Pistas Corn Island y Bluefields. Pista Los Brasiles. Pista Punta
-                                    Huete.
-                                    Estudio Geotécnico y Pavimento de Calles de Rodajes y Estacionamientos Aeropuerto
-                                    ACS.
-                                </li>
-                                <li>
-                                    <b>MECO</b>: Estudio Geotécnico Puente Bopal, sobre el río Grande de Matagalpa.
-                                    Puente
-                                    Paso a Desnivel La Robelo. Ampliación Cauce Oriental.
-                                </li>
-                                <li>
-                                    <b>VACSA</b>: CEDIS, km 13 carretera Vieja a León. Varias Plantas Industriales en
-                                    Zona
-                                    Franca Saratoga. Puesto Fronterizo San Pancho con Costa Rica. Chequeo de Relleno
-                                    Grupo
-                                    Q, Pista Jean Paul Genie, entre otros múltiples.
+                                <li >
+                                    <b>VACSA</b>: 
+                                    <ul>
+                                        <li data-section="nosotros" data-value="vacsa-1">Estudio geotécnico del CEDIS ubicado en el km 13 carretera vieja a León.</li>
+                                        <li data-section="nosotros" data-value="vacsa-2">Estudio geotécnico de varias plantas industriales en zona franca Saratoga.</li>
+                                        <li data-section="nosotros" data-value="vacsa-3">Estudio geotécnico del puesto fronterizo en San Pancho frontera con Costa Rica.</li>
+                                        <li data-section="nosotros" data-value="vacsa-4"> Estudio geotécnico de chequeo de relleno de oficinas centrales de Grupo Q, sobre la pista Jean Paul Genie.</li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
