--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -17,183 +17,186 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-   <!-- AQUÍ COMIENZA EL NAVBAR-->
-   <nav class="navbar navbar-expand-md navbar-light bg-white">
-    <div class="container-fluid nav-tuneado">
-        <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto nav-ul">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
-                        data-value="inicio">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
-                        data-value="nosotros">Nosotros</a>
-                </li>
+    <!-- AQUÍ COMIENZA EL NAVBAR-->
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <div class="container-fluid nav-tuneado">
+            <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto nav-ul">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
+                            data-value="inicio">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
+                            data-value="nosotros">Nosotros</a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
-                        Servicios
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="estudios-geotecnicos" data-section="nav"
-                                data-value="servicio1">Estudios de
-                                suelos</a></li>
-                        <li><a class="dropdown-item" href="control-de-calidad-de-materiales" data-section="nav"
-                                data-value="servicio2">Control de
-                                calidad de materiales</a></li>
-                        <li><a class="dropdown-item" href="laboratorio-de-suelos" data-section="nav"
-                                data-value="servicio3">Laboratorio de suelos</a></li>
-                        <li><a class="dropdown-item" href="perforacion" data-section="nav"
-                                data-value="servicio4">Perforación</a></li>
-                    </ul>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="servicios">
+                            Servicios
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="estudios-geotecnicos" data-section="nav"
+                                    data-value="servicio1">Estudios de
+                                    suelos</a></li>
+                            <li><a class="dropdown-item" href="control-de-calidad-de-materiales" data-section="nav"
+                                    data-value="servicio2">Control de
+                                    calidad de materiales</a></li>
+                            <li><a class="dropdown-item" href="laboratorio-de-suelos" data-section="nav"
+                                    data-value="servicio3">Laboratorio de suelos</a></li>
+                            <li><a class="dropdown-item" href="perforacion" data-section="nav"
+                                    data-value="servicio4">Perforación</a></li>
+                        </ul>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <img src="./img/icons/lang_icon.png" class="lang-icon">
-                    </a>
-                    <ul class="dropdown-menu" id="idioma">
-                        <li><a class="dropdown-item" data-language="es" href="#"> <img
-                                    src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
-                                    width="30rem"> es</a></li>
-                        <li><a class="dropdown-item" data-language="en" href="#"> <img
-                                    src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
-                                    width="30rem"> en</a></li>
-                    </ul>
-                </li>
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img src="./img/icons/lang_icon.png" class="lang-icon">
+                        </a>
+                        <ul class="dropdown-menu" id="idioma">
+                            <li><a class="dropdown-item" data-language="es" href="#"> <img
+                                        src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
+                                        width="30rem"> es</a></li>
+                            <li><a class="dropdown-item" data-language="en" href="#"> <img
+                                        src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
+                                        width="30rem"> en</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-<!-- AQUÍ TERMINA EL NAVBAR-->
+    </nav>
+    <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
         <h3>Control de calidad del concreto </h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row descripcion-servicio">
-            <p >
-                El control de calidad del concreto mediante cilindros, viguetas, cubos, martillo suizo y extracción de
-                núcleos son diversas técnicas y pruebas específicas que se utilizan para evaluar diferentes propiedades
-                del concreto. A continuación, se describen brevemente cada uno de estos métodos:
+        <div class="container">
+            <div class="row descripcion-servicio">
+                <p data-section="control-calidad-concreto" data-value="resumen">
+                    El control de calidad del concreto lo realizamos mediante las siguientes pruebas específicas:
 
-            </p>
+                </p>
+            </div>
+            <div class="row descripcion-servicio">
+                <div class="col-md">
+
+                    <div class="card card-desc card-servicio card-servicio">
+                        <div class="card-body justify-content-center align-items-center">
+                            <h4 class="text-center fs-5">Cilindros de Concreto</h4>
+                            <p data-section="control-calidad-concreto" data-value="cilindros-concreto-desc"> Los
+                                cilindros de concreto nos permiten realizar pruebas de resistencia a la compresión.
+                                <br> <br>
+                                <b>Procedimiento:</b> <br>Se moldean cilindros de concreto en el sitio o en el
+                                laboratorio y luego se someten a pruebas de resistencia a la compresión para evaluar la
+                                capacidad del concreto para soportar cargas de compresión.
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+
+                    <div class="card card-desc card-servicio">
+                        <div class="card-body">
+                            <h4 class="text-center fs-5" data-section="control-calidad-concreto"
+                                data-value="viguetas-concreto">Viguetas de Concreto</h4>
+                            <p data-section="control-calidad-concreto" data-value="viguetas-concreto-desc">
+                                Las viguetas se utilizan para evaluar la resistencia a flexión y otras propiedades del
+                                concreto. <br><br> <b>Procedimiento:</b> Las viguetas se moldean y se someten a pruebas
+                                para medir su capacidad para resistir cargas flexionales y evaluar la calidad y
+                                durabilidad del concreto.
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md ">
+                    <div class="card card-desc card-servicio ">
+                        <div class="card-body align-items-center">
+                            <h4 class="text-center fs-5" data-section="control-calidad-concreto"
+                                data-value="cubos-concreto">Cubos de concreto</h4>
+                            <p data-section="control-calidad-concreto" data-value="cubos-concreto-desc">
+                                Los cubos los usamos para realizar pruebas de resistencia a la compresión, similares a
+                                los cilindros.
+                                <br> <br>
+                                <b>Procedimiento:</b> <br>Se moldean cubos de concreto y se someten a pruebas de
+                                resistencia a la compresión para evaluar la calidad del concreto.
+
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row descripcion-servicio">
+                <div class="col-md ">
+                    <div class="card card-desc card-servicio">
+                        <div class="card-body">
+                            <h4 class="text-center fs-5" data-section="control-calidad-concreto"
+                                data-value="martillo-suizo">Martillo Suizo (Esclerómetro)</h4>
+                            <p data-section="control-calidad-concreto" data-value="martillo-suizo-desc">
+                                El martillo suizo, o esclerómetro, se utiliza para medir la dureza superficial del
+                                concreto.<br><br><b>Procedimiento:</b><br> El martillo suizo se golpea contra la
+                                superficie del concreto, y la energía del rebote se mide para estimar la dureza
+                                superficial. Se utiliza para evaluar la calidad del concreto y detectar posibles
+                                problemas como la carbonatación.
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md ">
+                    <div class="card card-desc card-servicio">
+                        <div class="card-body">
+                            <h4 class="text-center fs-5" data-section="control-calidad-concreto"
+                                data-value="extraccion-nucleos">Extracción de núcleos</h4>
+                            <p data-section="control-calidad-concreto" data-value="extraccion-nucleos-desc">
+
+                                La extracción de núcleos la utilizamos para obtener muestras del concreto en estructuras
+                                existentes y evaluar su resistencia y condiciones internas.
+                                <br><br>
+                                <b>Procedimiento:</b>Se perfora un núcleo del concreto utilizando una herramienta
+                                especial, y la muestra
+                                resultante se utiliza para realizar pruebas de resistencia a la compresión y analizar la
+                                calidad y condiciones internas del concreto.
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <p data-section="control-calidad-concreto" data-value="resumen-final">Estas técnicas son parte integral
+                    del control de calidad del concreto y se seleccionan según los aspectos específicos que se desean
+                    evaluar en un proyecto. Las pruebas proporcionan información valiosa para garantizar que el concreto
+                    cumpla con los estándares requeridos y para prevenir posibles problemas a lo largo del tiempo.</p>
+            </div>
+
+            <!--CONTACTANOS-->
+            <div class="container text-center ">
+                <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
+                    data-value="btn-contactanos">Contáctanos</a>
+            </div>
+            <!--CONTACTANOS-->
         </div>
-        <div class="row descripcion-servicio">
-            <div class="col-md">
-
-                <div class="card card-desc card-servicio card-servicio">
-                    <div class="card-body justify-content-center align-items-center">
-                        <h4 class="text-center fs-5">Cilindros de Concreto</h4>
-                        <p> Los cilindros de concreto se utilizan para realizar pruebas de resistencia a la
-                            compresión.
-                            <br> <br>
-                            <b>Procedimiento:</b> <br>Se moldean cilindros de concreto en el sitio o en el laboratorio y
-                            luego se
-                            someten a pruebas de resistencia a la compresión para evaluar la capacidad del concreto para
-                            soportar cargas de compresión.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md">
-
-                <div class="card card-desc card-servicio">
-                    <div class="card-body">
-                        <h4 class="text-center fs-5">Viguetas de Concreto</h4>
-                        <p>
-                            Las viguetas se utilizan para evaluar la resistencia a flexión y otras
-                            propiedades del concreto.
-                            <br> <br>
-                            <b> Procedimiento:</b><br>
-                            Las viguetas se moldean y se someten a pruebas para medir su capacidad para
-                            resistir cargas flexionales y evaluar la calidad y durabilidad del concreto.
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md ">
-                <div class="card card-desc card-servicio ">
-                    <div class="card-body align-items-center">
-                        <h4 class="text-center fs-5">Cubos de concreto</h4>
-                        <p>
-                            Los cubos se utilizan para realizar pruebas de resistencia a la compresión,
-                            similares a los cilindros.
-                            <br> <br>
-                            <b> Procedimiento:</b><br>
-                            Se moldean cubos de concreto y se someten a pruebas de resistencia a la
-                            compresión para evaluar la calidad del concreto.
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row descripcion-servicio">
-            <div class="col-md ">
-                <div class="card card-desc card-servicio">
-                    <div class="card-body">
-                        <h4 class="text-center fs-5">Martillo Suizo (Esclerómetro)</h4>
-                        <p>
-                            El martillo suizo, o esclerómetro, se utiliza para medir la dureza superficial
-                            del concreto.
-                            <br> <br>
-                            <b> Procedimiento:</b><br>
-                            El martillo suizo se golpea contra la superficie del concreto, y la energía
-                            del rebote se mide para estimar la dureza superficial. Se utiliza para evaluar la calidad
-                            del concreto y detectar posibles problemas como la carbonatación.
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md ">
-                <div class="card card-desc card-servicio">
-                    <div class="card-body">
-                        <h4 class="text-center fs-5">Extracción de Núcleos</h4>
-                        <p>
-
-                            La extracción de núcleos se utiliza para obtener muestras del concreto en
-                            estructuras existentes y evaluar su resistencia y condiciones internas.
-                            <br> <br>
-                            <b> Procedimiento:</b><br>
-                            Se perfora un núcleo del concreto utilizando una herramienta especial, y la
-                            muestra resultante se utiliza para realizar pruebas de resistencia a la compresión y
-                            analizar la calidad y condiciones internas del concreto.
-
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--CONTACTANOS-->
-        <div class="container text-center ">
-            <a class="btn btn-contacto texto-blanco fs-5" href="contacto.html" role="button" data-section="inicio"
-                data-value="btn-contactanos">Contáctanos</a>
-        </div>
-        <!--CONTACTANOS-->
     </div>
 
 
