Modificaciones en CCConcreto y añadidos los datos de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -95,31 +95,33 @@
                         <h4 data-section="datos-contacto" data-value="tel">Llámanos o escríbenos a nuestro Whatsapp</h4>
                         <img src="./img/icons/call_us_icon.png" class="d-inline"
                             style="width:2rem !important; height: 2rem !important; ">
-                        <p class="d-inline">+505 8527-4908</p>
+                        <p class="d-inline">+505 5810-3203</p>
                         <br>
-                        <a href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
+                        <a href="https://wa.me/50558103203?"
                             class="link-offset-3" target="_blank">
                             <img src="./img/icons/whatsappus_icon.png" class="d-inline"
-                                style="width:2rem !important; height: 2rem !important;">+xxxxxxx<p></p>
+                                style="width:2rem !important; height: 2rem !important;">+505 5810-3203<p></p>
                         </a>
+                        
 
                     </div>
                     <hr>
                     <div>
                         <h4 data-section="datos-contacto" data-value="email">Correo</h4>
                         <a class="link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                            href="mailto:jim@example.com">jim@example.com</a>
+                            href="mailto:Info@geonicsa.com">Info@geonicsa.com</a>
                     </div>
                     <hr>
                     <div>
                         <h4 class="fs-5">HORARIO</h4>
                         <ul>
-                            <li>
-                                Lunes a Viernes:
-                            </li>
-                            <li>
-                                Sabados y Domingos:
-                            </li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                    data-section="footer" data-value="dias-habiles">Lunes a
+                                    Viernes:</a> 7:00 AM - 4:00 PM</li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                    data-section="footer" data-value="sabado">Sábados:</a> 7:00 AM - 12:00 MD</li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"
+                                    data-section="footer" data-value="horario-domingo">Domingos: </a></li>
                         </ul>
                     </div>
 
