--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                 href="mailto:Info@geonicsa.com">Info@geonicsa.com</a><br />
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="https://wa.me/50585274908?text=Este%20es%20un%20mensaje%20de%20prueba%20FIRMA:%20ISA"
+                href="https://wa.me/50558103203?"
                 target="_blank">+505 5810-3203</a>
         </address>
 
@@ -333,23 +333,23 @@
                                 href="#">
                                 <img class="d-inline" src="./img/icons/call_us_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
-                                <p class="d-inline">+xx xxxxxxx</p>
+                                <p class="d-inline">+505 5810-3203</p>
                             </a>
                         </li>
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="#">
+                                href="mailto:Info@geonicsa.com">
                                 <img class="d-inline" src="./img/icons/email_us.png"
                                     style="width:2rem !important; height: 2rem !important; ">
-                                <p class="d-inline">+xx xxxxxxx</p>
+                                <p class="d-inline">Info@geonicsa.com</p>
                             </a>
                         </li>
                         <li class="nav-item mb-2  align-middle li-footer">
                             <a class=" link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover li-footer"
-                                href="#">
+                                href="https://wa.me/50558103203?">
                                 <img class="d-inline" src="./img/icons/whatsappus_icon.png"
                                     style="width:2rem !important; height: 2rem !important; ">
-                                <p class="d-inline">+xx xxxxxxx</p>
+                                <p class="d-inline">+505 5810-3203</p>
                             </a>
                         </li>
 
