MOdificadas las traducciones de CCSuelos y concreto

--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -38,8 +38,8 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
@@ -89,12 +89,16 @@
     <div class="container-fluid rounded-top-4 banner-blanco">
         <div class="container descripcion-servicio">
             <div class="row ">
-                <p  data-section="control-calidad-suelos" data-value="resumen">
+                <p data-section="control-calidad-suelos" data-value="resumen">
                     El control de calidad de los suelos mediante pruebas de compactación, utilizando métodos como el
                     cono de
                     arena y el densímetro nuclear, es esencial en la ingeniería civil y la construcción para evaluar la
                     capacidad de soporte y la densidad de los suelos. A continuación, se describen brevemente ambos
-                    métodos:
+                    métodos:El control de calidad de los suelos lo realizamos mediante pruebas de compactación,
+                    utilizando métodos como el cono de arena y el densímetro nuclear, estos procedimientos son
+                    esenciales en la ingeniería civil y en la construcción para evaluar la capacidad de soporte y la
+                    densidad de los suelos. <br><br>
+                    A continuación, se describen brevemente ambos métodos:
 
 
                 </p>
@@ -123,7 +127,7 @@
                                         utilizando el
                                         cono de
                                         arena.</li>
-                                    <li>Se mide la densidad seca y la humedad después de la compactación.
+                                    <li>Medimos la densidad seca y la humedad después de la compactación.
                                     </li>
                                     <li>Se repite el proceso con diferentes contenidos de humedad para determinar la
                                         curva
@@ -143,9 +147,11 @@
 
                     <div class="card card-desc card-servicio">
                         <div class="card-body">
-                            <h4 class="text-center fs-5" data-section="control-calidad-suelos" data-value="metodo-2-titulo">Prueba de Compactación con Densímetro Nuclear</h4>
+                            <h4 class="text-center fs-5" data-section="control-calidad-suelos"
+                                data-value="metodo-2-titulo">Prueba de Compactación con Densímetro Nuclear</h4>
                             <div data-section="control-calidad-suelos" data-value="metodo-2-desc">
-                                <p>  Medir la densidad in situ de un suelo y proporcionar información sobre la calidad de la compactación.
+                                <p> Medir la densidad in situ de un suelo y proporcionar información sobre la calidad de
+                                    la compactación.
 
 
                                 </p>
@@ -156,14 +162,16 @@
                                     </li>
                                     <li>Se emite una fuente de radiación gamma hacia el suelo.
                                     </li>
-                                    <li>El densímetro mide la radiación dispersa, que está relacionada con la densidad del suelo.
+                                    <li>El densímetro mide la radiación dispersa, que está relacionada con la densidad
+                                        del suelo.
                                     </li>
                                     <li>Se repite el proceso en varios puntos para obtener datos representativos.
 
                                     </li>
                                 </ol>
                                 <p>
-                                    <b>Resultado:</b>  Se obtienen lecturas directas de la densidad del suelo sin necesidad de extraer muestras.
+                                    <b>Resultado:</b> Se obtienen lecturas directas de la densidad del suelo sin
+                                    necesidad de extraer muestras.
 
                                 </p>
                             </div>
