--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -82,7 +82,7 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3>Control de calidad del concreto </h3>
+        <h3 data-section="control-calidad-concreto" data-value="titulo">Control de calidad del concreto </h3>
     </div>
 
 
