Modificaciones a Lab de suelos traduccion, falta estudios de suelos

--- a/laboratorio-de-suelos.html
+++ b/laboratorio-de-suelos.html
@@ -93,20 +93,12 @@
                     <p data-section="laboratorio-suelos" data-value="resumen">
 
                         Trabajamos conforme a las especificaciones de obra de la industria de la construcción en
-                        Nicaragua,
-                        Geonicsa realiza exhaustivas pruebas de control de calidad de suelos y materiales. Aplicamos
-                        rigurosamente las normativas nacionales NIC-2000, así como los estándares internacionales ASTM y
-                        AASHTO, acumulando una extensa experiencia en esta área. Contamos con un equipo completo de
-                        control
-                        de calidad y poseemos la capacidad de establecer laboratorios de campo.
-                        <br> <br>
+                        Nicaragua, Geonicsa realiza exhaustivas pruebas de control de calidad de suelos y materiales.
+                        Aplicamos rigurosamente las normativas nacionales NIC-2000, así como los estándares
+                        internacionales ASTM y AASHTO, acumulando una extensa experiencia en esta área. Contamos con un
+                        equipo completo de control de calidad y poseemos la capacidad de establecer laboratorios de
+                        campo.
 
-                        Un laboratorio de suelos es una instalación especializada en la que se llevan a cabo pruebas y
-                        análisis detallados para evaluar las propiedades físicas y mecánicas de los suelos. Estos
-                        laboratorios desempeñan un papel fundamental en la ingeniería civil, geotécnica, construcción y
-                        otras disciplinas relacionadas, ya que proporcionan información esencial para el diseño y la
-                        construcción de estructuras seguras y eficientes. Aquí se describen algunas de las funciones y
-                        actividades comunes realizadas en un laboratorio de suelos:
 
 
                     </p>
