--- a/perforacion.html
+++ b/perforacion.html
@@ -38,8 +38,8 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false" data-section="nav" data-value="servicios">
                             Servicios
                         </a>
                         <ul class="dropdown-menu">
@@ -91,14 +91,11 @@
         <div class="container">
             <div class="row ">
                 <div class="col-md descripcion-servicio">
-                    <p data-section="perforacion" data-value="resumen">Geonicsa cuenta con un departamento de perforación interno dedicado a la realización de estudios
-                        de
-                        suelos, brindando servicios a una variedad de clientes en el sector de la construcción. La
-                        empresa
-                        se ha especializado en perforaciones en roca y suelos, disponiendo del equipamiento adecuado
-                        para
-                        tales fines. En este aspecto, la firma cuenta con equipos portátiles y máquinas perforadoras
-                        rotativas, complementadas con sus respectivos accesorios.
+                    <p data-section="perforacion" data-value="resumen">Geonicsa cuenta con un departamento de
+                        perforación dedicado a la realización de estudios de suelos. Nos especializamos en perforaciones
+                        en roca y suelos, contamos con equipos portátiles y maquinas perforadoras rotativas
+                        complementadas con sus respectivos accesorios.
+
 
                     </p>
 
@@ -106,7 +103,8 @@
 
 
                 <div class="col-md descripcion-servicio">
-                    <h3 class="fs-5" data-section="perforacion" data-value="servicios-titulo" >Dentro de los servicios de perforación que ofrecemos se incluyen:</h3>
+                    <h3 class="fs-5" data-section="perforacion" data-value="servicios-titulo">Dentro de los servicios de
+                        perforación que ofrecemos se incluyen:</h3>
                     <div class="d-flex" style="height: fit-content;">
                         <div class="vr"></div>
                         <div data-section="perforacion" data-value="servicios-lista">
