Agregada la frase en index y el icono de wsp

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 
         <div class="texto-derecha">
             <p class="" style="text-shadow: 2px 2px 6px #000000;" data-section="inicio" data-value="texto-nosotros">
-                Nos
-                especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados
-                por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.
+                Veinte años de experiencia y nuestro portafolio de proyectos respalda la calidad de nuestro trabajo y el
+                valor estratégico que generamos a cada proyecto de nuestros clientes.
             </p>
             <a class="btn btn-contacto texto-blanco fs-6" style="margin-left: 0% !important;" href="contacto.html"
                 role="button" data-section="inicio" data-value="btn-contactanos">Contáctanos</a>
@@ -104,8 +103,9 @@
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                 href="mailto:Info@geonicsa.com">Info@geonicsa.com</a><br />
             <a class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="https://wa.me/50558103203?"
-                target="_blank">+505 5810-3203</a>
+                href="https://wa.me/50558103203?" target="_blank"><img class="d-inline"
+                    src="./img/icons/whatsappus_icon_negativo.png"
+                    style="width:2.2rem !important; height: 2rem !important; ">+505 58103203</a>
         </address>
 
 
@@ -128,7 +128,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio1">Estudios
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio1">
+                                    Estudios
                                     Geotécnicos</h3>
                             </a>
                         </div>
@@ -145,7 +146,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio2">Control de
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio2">
+                                    Control de
                                     Calidad de Materiales</h3>
                             </a>
                         </div>
@@ -162,7 +164,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio3">Laboratorio de
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio3">
+                                    Laboratorio de
                                     suelos
                                 </h3>
                             </a>
@@ -179,7 +182,8 @@
                                     <path
                                         d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z" />
                                 </svg>
-                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio4">Perforación</h3>
+                                <h3 class="card-title text-center fs-5" data-section="inicio" data-value="servicio4">
+                                    Perforación</h3>
                             </a>
                         </div>
                     </div>
@@ -312,7 +316,7 @@
         </div>
     </div>
 
-    
+
 
     <!--CONTACTANOS-->
     <div class="container text-center ">
